--- a/fmi_55.html
+++ b/fmi_55.html
@@ -110,22 +110,22 @@
                     <table>
                         <tr>
 
-                            $$\begin{cases} \frac{da}{d\tau} = a + \epsilon \cos {\phi}, \tau ∈[0,1],
+                            $$\begin{cases} \frac{da}{d\tau} = a + \epsilon \cos {\phi}, \tau ∈[l,L],
                             \\ \frac{\phi}{d\tau} = \frac{a}{\epsilon}.
                             \end{cases}$$
                             <br>
-                            $$\begin{cases} a_{|\tau=0} + a_{|\tau=L} = 1, ,
-                            \\ \phi_{|\tau=0} + \phi_{|\tau=L} = 0.
+                            $$\begin{cases} a_{|\tau=l} + a_{|\tau=L} = 1,
+                            \\ \phi_{|\tau=l} + \phi_{|\tau=L} = 0.
                             \end{cases}$$
                             
                         </tr>
                         <tr>
                             <td>
-                                <label for="start">Початкове значення t:</label>
+                                <label for="start">Початкове значення l:</label>
                                 <input type="number" id="start" name="start" value="0">
                             </td>
                             <td>
-                                <label for="end">Кінцеве значення t:</label>
+                                <label for="end">Кінцеве значення L:</label>
                                 <input type="number" id="end" name="end" value="1">
                             </td>
                             <td>
